# Streamlit_Temperature2RGB

./: .gitignore  LICENSE.md  README.md  app.py  pyproject.toml  requirements.txt
src/: app.py  config.toml  constants.py
src/Temperature2RGB/: __init__.py  blackbody_to_aces.py  resultFormatting.py
src/core/: __init__.py  color_transform.py  utils.py
src/interface/: __init__.py  daylight.py  planckian.py
src/streamlit_temperature2rgb/: __init__.py  _utils.py
src/streamlit_temperature2rgb/core/: _conversions.py  _stringify.py
src/streamlit_temperature2rgb/ui/: __init__.py  _config.py  _controller.py  _main.py
streamlit_temperature2rgb/: __init__.py  _main.py  _utils.py  app.py  config.py
streamlit_temperature2rgb/core/: __init__.py  _plot.py  _stringify.py  color_transform.py  utils.py
streamlit_temperature2rgb/interface/: __init__.py  _main.py  daylight.py  planckian.py
streamlit_temperature2rgb/ui/: __init__.py  _config.py  _controller.py  _main.py  _sidebar.py  config.py  daylight.py  planckian.py
tests/: run.sh
