[tool.poetry]
name = "streamlit-temperature2RGB"
version = "0.1.0"
description = ""
authors = ["Liam Collod <lcollod@gmail.com>"]
readme = "README.md"
packages = [{ include = "streamlit_temperature2rgb" }]

[tool.poetry.dependencies]
python = ">3.9.7,<3.12"
streamlit = "^1.25"
colour-science = "^0.4"

[tool.poetry.dev-dependencies]
black = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
