[tool.poetry]
name = "Streamlit_Temperature2RGB"
version = "1.1.1"
description = "Convert Kelvin temperatures to RGB color in a web-app"
authors = ["Liam Collod <lcollod@gmail.com>"]
readme = "README.md"
packages = [{ include = "streamlit_temperature2rgb" }]

[tool.poetry.dependencies]
python = ">3.9.7,<3.12"
streamlit = "^1.25"
colour-science = { version = "0.4.2", extras = ["plotting"] }
matplotlib = "*"

[tool.poetry.dev-dependencies]
black = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
