[project]
name = "Streamlit_Temperature2RGB"
version = "2.0.0"
description = "Convert Kelvin temperatures to RGB color in a web-app"
authors = ["Liam Collod <monsieurlixm@gmail.com>"]
readme = "README.md"
packages = [{ include = "streamlit_temperature2rgb" }]
requires-python = ">=3.11"
dependencies = [
    "colour-science>=0.4.7",
    "matplotlib>=3.10.8",
    "streamlit>=1.55.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
]
